refactor(combobox): review combo box part 1
use this.emit to dispatch event, rename selected event to convention, update .dropdown-item box
shadow style, combobox value to be a string of ; separated values, checkbox label to have 100% width
to enable checkbox click space to span the entire menu, handle keyboard enter on combobox-item

--- a/index.html
+++ b/index.html
@@ -769,12 +769,12 @@
       <sgds-combo-box menuList='[
       { "label": "John Smith", "value": 1 },
       { "label": "Jack Adams", "value": 2 },
-      { "label": "John Smith", "value": 3 },
-      { "label": "Jack Adams", "value": 4 },
-      { "label": "John Smith", "value": 5 },
-      { "label": "Jack Adams", "value": 6 },
-      { "label": "John Smith", "value": 7 },
-      { "label": "Jack Adams", "value": 8 }
+      { "label": "Regina Bride", "value": 3 },
+      { "label": "Christian Dior", "value": 4 },
+      { "label": "Prada Low", "value": 5 },
+      { "label": "Chloe Delight", "value": 6 },
+      { "label": "Jade Apheremal", "value": 7 },
+      { "label": "Louis Vuitton", "value": 8 }
     ]' label="label" hintText="hint" hasFeedback="true" invalidFeedback="test">
         <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
           class="bi bi-search" viewBox="0 0 16 16">
