--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
     ]' label="label" hintText="hint" hasFeedback="true" invalidFeedback="test">
       </sgds-combo-box>
 
-      <sgds-combo-box menuList='[
+      <sgds-combo-box value="1;2;3;4;5;6;7;8" menuList='[
       { "label": "John Smith", "value": "1" },
       { "label": "Jack Adams", "value": "2" },
       { "label": "Regina Bride", "value": "3" },
@@ -789,12 +789,13 @@
       { "label": "Chloe Delight", "value": "6" },
       { "label": "Jade Apheremal", "value": "7" },
       { "label": "Louis Vuitton", "value": "8" }
-    ]'  multiSelect label="label" hintText="multiple" invalid hasFeedback="true" invalidFeedback="test">
+    ]'  multiSelect label="label" hintText="multiple" hasFeedback="true" invalidFeedback="test">
       </sgds-combo-box>
+      <input readonly value="hello" />
       <h2>Datepicker</h2>
       <form id="datepicker-form">
-        <sgds-input type="date" hasFeedback required></sgds-input>
-        <sgds-input required type="text" label="Label" hinttext="This is a hint text" name="email" inputclasses=""
+        <sgds-input type="date" hasFeedback required ></sgds-input>
+        <sgds-input required readonly value="hello" type="text" label="Label" hinttext="This is a hint text" name="email" inputclasses=""
           invalidfeedback="test" icon="<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; fill=&quot;currentColor&quot; class=&quot;bi bi-envelope&quot; viewBox=&quot;0 0 16 16&quot;>
 												<path d=&quot;M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z&quot;/>
 												</svg>" placeholder="Placeholder" required hasFeedback>
