chore(mainnav item): change link item to slot

--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
 <sgds-mainnav expand="lg">
   <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand">
 
-  <sgds-mainnav-item active href="#">
-    Home
+  <sgds-mainnav-item active>
+    <a href="#">Home</a>
   </sgds-mainnav-item>
-  <sgds-mainnav-item active href="#">
-    Home
+  <sgds-mainnav-item active>
+    <a href="#">Home</a>
   </sgds-mainnav-item>
-  <sgds-mainnav-item disabled href="#">About</sgds-mainnav-item>
-  <sgds-mainnav-item href="#" slot="end" class="test test2">Info</sgds-mainnav-item>
-  <sgds-mainnav-item href="#" slot="end" id="night-theme"><i class="bi bi-moon"></i></sgds-mainnav-item>
+  <sgds-mainnav-item disabled><a href="#">About</a></sgds-mainnav-item>
+  <sgds-mainnav-item slot="end" class="test test2"><a href="#" >Info</a></sgds-mainnav-item>
+  <sgds-mainnav-item slot="end" id="night-theme"><a href="#"><i class="bi bi-moon"></i></a></sgds-mainnav-item>
   <sgds-mainnav-dropdown>
     <span slot="toggler">Dropdown</span>
     <sgds-dropdown-item disabled><a href="https://www.google.com/">Item 1</a></sgds-dropdown-item>
