--- a/index.html
+++ b/index.html
@@ -650,61 +650,61 @@
       </sgds-tab-group>
 
       <sgds-description-list-group>
-        <span slot="subtitle">Description</span>
+        <span slot="description">Description</span>
 
         <sgds-description-list>
           Label 1
-          <span slot="data">Value Text Description List 1</span>
+          <span slot="data">Data Text Description List 1</span>
         </sgds-description-list>
 
         <sgds-description-list>
           Label 2
-          <span slot="data">Value Text Description List 2</span>
+          <span slot="data">Data Text Description List 2</span>
         </sgds-description-list>
       </sgds-description-list-group>
 
       <sgds-description-list-group stacked>
         <span slot="title"> Title</span>
-        <span slot="subtitle">Description</span>
+        <span slot="description">Description</span>
 
         <sgds-description-list>
           Label Stacked 1
-          <span slot="data">Value Text Description List 1</span>
+          <span slot="data">Data Text Description List 1</span>
         </sgds-description-list>
 
         <sgds-description-list>
           Label Stacked 2
-          <span slot="data">Value Text Description List 2</span>
+          <span slot="data">Data Text Description List 2</span>
         </sgds-description-list>
       </sgds-description-list-group>
 
       <sgds-description-list-group stacked bordered>
         <span slot="title"> Title Border</span>
-        <span slot="subtitle">Description</span>
+        <span slot="description">Description</span>
 
         <sgds-description-list>
           Label Stacked 1
-          <span slot="data">Value Text Description List 1</span>
+          <span slot="data">Data Text Description List 1</span>
         </sgds-description-list>
 
         <sgds-description-list>
           Label Stacked 2
-          <span slot="data">Value Text Description List 2</span>
+          <span slot="data">Data Text Description List 2</span>
         </sgds-description-list>
       </sgds-description-list-group>
 
       <sgds-description-list-group bordered>
         <span slot="title"> Title Border</span>
-        <span slot="subtitle">Description</span>
+        <span slot="description">Description</span>
 
         <sgds-description-list>
           Label 1
-          <span slot="data">Value Text Description List 1</span>
+          <span slot="data">Data Text Description List 1</span>
         </sgds-description-list>
 
         <sgds-description-list>
           Label 2
-          <span slot="data">Value Text Description List 2</span>
+          <span slot="data">Data Text Description List 2</span>
         </sgds-description-list>
       </sgds-description-list-group>
 
