chore(link): update link styling

--- a/index.html
+++ b/index.html
@@ -420,6 +420,18 @@
       <sgds-link variant="danger">
         <a href="#" disabled>Danger light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
       </sgds-link>
+      <sgds-link variant="light">
+        <a href="#">Light variant light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
+      <sgds-link variant="light">
+        <a href="#" disabled>Light variant light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
+      <sgds-link variant="dark">
+        <a href="#">Dark variant light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
+      <sgds-link variant="dark">
+        <a href="#" disabled>Dark variant light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
       <sgds-link size="lg">
         <a href="#"> LG light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
       </sgds-link>
