style(sidenav): update active background color

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <sgds-sidenav-link disabled>
         <a href="#"> disbaED-test</a>
       </sgds-sidenav-link>
-      <sgds-sidenav-link>
+      <sgds-sidenav-link active>
         <a href="#"> first-test</a>
       </sgds-sidenav-link>
       <sgds-sidenav-item>
