style(stepper): update styling

--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
       <h2>Stepper</h2>
       <div>
         <h3>Horizontal Stepper</h3>
-        <sgds-stepper activeStep="1"
+        <sgds-stepper clickable activeStep="1"
           steps='[{"stepHeader":"Personal Details","component":"1 test"},{"stepHeader":"Address and Contact Information","component":"2 test"},{"stepHeader":"Review","component":"3 test"}]'>
 
         </sgds-stepper>
