--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
     ];
   </script>
   <link href="./src/themes/day.css" rel="stylesheet" type="text/css" />
-  <link href="./src/css/reboot.css" rel="stylesheet" type="text/css" />
   <link href="./src/themes/night.css" rel="stylesheet" type="text/css" />
+  <link href="./src/css/sgds.css" rel="stylesheet" type="text/css" />
 </head>
 
 
@@ -162,6 +162,40 @@
   <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px">
   </dev-console-widget>
 </sgds-mainnav>
+<div class="sgds-container">
+  <div class="sgds-grid">
+    <sgds-card class="sgds-col-2 sgds-col-sm-6 sgds-col-md-4 sgds-col-xl-3">
+      <img slot="image" alt="img alternate text goes here" width="467" height="312"
+        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
+      <span slot="subtitle">SUBTITLE</span>
+      <span slot="title">Vertical Image Card</span>
+      <span slot="description">default vertical card</span>
+      <sgds-link slot="link">
+        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+      </sgds-link>
+    </sgds-card>
+    <sgds-card class="sgds-col-2 sgds-col-sm-6 sgds-col-md-4 sgds-col-xl-3">
+      <img slot="image" alt="img alternate text goes here" width="467" height="312"
+        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
+      <span slot="subtitle">SUBTITLE</span>
+      <span slot="title">Vertical Image Card</span>
+      <span slot="description">default vertical card</span>
+      <sgds-link slot="link">
+        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+      </sgds-link>
+    </sgds-card>
+    <sgds-card class="sgds-col-2 sgds-col-sm-6 sgds-col-md-4 sgds-col-xl-3">
+      <img slot="image" alt="img alternate text goes here" width="467" height="312"
+        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
+      <span slot="subtitle">SUBTITLE</span>
+      <span slot="title">Vertical Image Card</span>
+      <span slot="description">default vertical card</span>
+      <sgds-link slot="link">
+        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+      </sgds-link>
+    </sgds-card>
+  </div>
+</div>
 <div class="grid-preview">
   <sgds-sidenav-item active>
     <div slot="title">standalone</div>
@@ -458,35 +492,61 @@
     </div>
     <div class="container">
 
-      <sgds-table tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
+      <sgds-table rowheader="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
         tabledata="[
 [&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
 [&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
 [&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
 ]" striped="" bordered="" borderless="" hover size="" variant="dark" responsive="" sort="" removablesort="">
+        <tbody>
+          <tr>
+            <td>Row 1, Column 1</td>
+            <td>Row 1, Column 2</td>
+          </tr>
+        </tbody>
       </sgds-table>
-      <sgds-table tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
+      <sgds-table rowheader="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
         tabledata="[
 [&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
 [&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
 [&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
 ]" striped="" bordered="" borderless="" hover size="" variant="light" responsive="" sort="" removablesort="">
       </sgds-table>
-      <sgds-table tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
+      <sgds-table rowheader="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
         tabledata="[
 [&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
 [&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
 [&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
 ]">
       </sgds-table>
-      <sgds-table tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
+      <sgds-table headerPosition="vertical" columnheader="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
+        tabledata="[
+[&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
+[&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
+[&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
+]">
+      </sgds-table>
+      <sgds-table headerPosition="both" 
+        rowHeader="[&quot;8-12&quot;, &quot;12-16&quot;, &quot;16-20&quot;, &quot;20-24&quot;]"
+        columnheader="[&quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wednesday&quot;, &quot;Thursday&quot;, &quot;Friday&quot;, &quot;Saturday&quot;, &quot;Sunday&quot;]"
+        tabledata="[
+[&quot;20&quot;, &quot;100&quot;, &quot;240&quot;, &quot;8&quot;],
+[&quot;35&quot;, &quot;148&quot;, &quot;325&quot;, &quot;17&quot;],
+[&quot;16&quot;, &quot;78&quot;, &quot;153&quot;, &quot;12&quot;],
+[&quot;43&quot;, &quot;82&quot;, &quot;96&quot;, &quot;35&quot;],
+[&quot;36&quot;, &quot;174&quot;, &quot;453&quot;, &quot;82&quot;],
+[&quot;149&quot;, &quot;336&quot;, &quot;792&quot;, &quot;129&quot;],
+[&quot;133&quot;, &quot;302&quot;, &quot;508&quot;, &quot;66&quot;]
+]">
+      </sgds-table>
+      <sgds-table rowheader="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
         tabledata="[
 [&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
 [&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
 [&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
 ]" striped="" bordered="" borderless="" hover="" size="sm" responsive="sm" sort="" removablesort="">
       </sgds-table>
-      <sgds-table tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
+      <sgds-table rowheader="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
         tabledata="[
 [&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
 [&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
@@ -1838,7 +1898,7 @@
       <br>
       <h2>Table w/ Sort</h2>
       <div class="row">
-        <sgds-table tableHeaders='["#", "Serial Number", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
+        <sgds-table rowheader='["#", "Serial Number", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
 									[2, "Jacob", "12hornton", "@fat"],
 									[3, "Larry", "@Bird", "@twitter"],
 									[4, "Chuck", "Norris", "@asdasdasd"]
@@ -1847,7 +1907,7 @@
       <br>
       <h2>Table w/ RemovableSort</h2>
       <div class="row">
-        <sgds-table removableSort sort tableHeaders='["#", "Serial Number", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
+        <sgds-table removableSort sort rowheader='["#", "Serial Number", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
 									[2, "Jacob", "12hornton", "@fat"],
 									[3, "Larry", "@Bird", "@twitter"],
 									[4, "Chuck", "Norris", "@asdasdasd"]
@@ -2144,7 +2204,7 @@
       }
 
       fetchPosts().then(posts => {
-        const tableHeaders = ["Id", "Title", "Body"];
+        const rowHeader = ["Id", "Title", "Body"];
         const tableData = posts.map(post => [
           post.id,
           post.title,
@@ -2161,7 +2221,7 @@
         const tablesample = document.getElementById("tablesample");
         if (tablesample) {
           tablesample.tableData = displayedData;
-          tablesample.tableHeaders = tableHeaders;
+          tablesample.rowHeader = rowHeader;
         }
 
 
@@ -2191,7 +2251,7 @@
         const tablesample2 = document.getElementById("tablesample2");
         if (tablesample2) {
           tablesample2.tableData = displayedData;
-          tablesample2.tableHeaders = tableHeaders;
+          tablesample2.rowHeader = rowHeader;
         }
 
 
