--- a/index.html
+++ b/index.html
@@ -164,36 +164,65 @@
 </sgds-mainnav>
 <div class="sgds-container">
   <div class="sgds-grid">
-    <sgds-card class="sgds-col-2 sgds-col-sm-6 sgds-col-md-4 sgds-col-xl-3">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card</span>
-      <sgds-link slot="link">
-        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
-      </sgds-link>
-    </sgds-card>
-    <sgds-card class="sgds-col-2 sgds-col-sm-6 sgds-col-md-4 sgds-col-xl-3">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card</span>
-      <sgds-link slot="link">
-        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
-      </sgds-link>
-    </sgds-card>
-    <sgds-card class="sgds-col-2 sgds-col-sm-6 sgds-col-md-4 sgds-col-xl-3">
-      <img slot="image" alt="img alternate text goes here" width="467" height="312"
-        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
-      <span slot="subtitle">SUBTITLE</span>
-      <span slot="title">Vertical Image Card</span>
-      <span slot="description">default vertical card</span>
-      <sgds-link slot="link">
-        <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
-      </sgds-link>
-    </sgds-card>
+    <div class="sgds-col-4 sgds-col-sm-6 sgds-col-md-9">
+      <div class="sgds-grid">
+        <sgds-card class="sgds-col-2 sgds-col-sm-4 sgds-col-md-4">
+          <img slot="image" alt="img alternate text goes here" width="467" height="312"
+            src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
+          <span slot="subtitle">SUBTITLE</span>
+          <span slot="title">Vertical Image Card</span>
+          <span slot="description">default vertical card</span>
+          <sgds-link slot="link">
+            <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+          </sgds-link>
+        </sgds-card>
+        <sgds-card class="sgds-col-2 sgds-col-sm-4 sgds-col-md-4">
+          <img slot="image" alt="img alternate text goes here" width="467" height="312"
+            src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
+          <span slot="subtitle">SUBTITLE</span>
+          <span slot="title">Vertical Image Card</span>
+          <span slot="description">default vertical card</span>
+          <sgds-link slot="link">
+            <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+          </sgds-link>
+        </sgds-card>
+        <sgds-card class="sgds-col-2 sgds-col-sm-4 sgds-col-md-4">
+          <img slot="image" alt="img alternate text goes here" width="467" height="312"
+            src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
+          <span slot="subtitle">SUBTITLE</span>
+          <span slot="title">Vertical Image Card</span>
+          <span slot="description">default vertical card</span>
+          <sgds-link slot="link">
+            <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+          </sgds-link>
+        </sgds-card>
+      </div>
+    </div>
+    <div class="sgds-col-none sgds-col-sm-2 sgds-col-md-3">
+      <sgds-table-of-contents>
+        <h2>Header</h2>
+        <li slot="contents">
+          <sgds-link>
+            <a href="#">Link</a>
+          </sgds-link>
+        </li>
+        <li slot="contents">
+          <sgds-link>
+            <a href="#">Link</a>
+          </sgds-link>
+        </li>
+        <li slot="contents">
+          <sgds-link>
+            <a href="#">Link</a>
+          </sgds-link>
+        </li>
+        <li slot="contents">
+          <sgds-link>
+            <a href="#">Link</a>
+          </sgds-link>
+        </li>
+      </sgds-table-of-contents>
+    </div>
   </div>
 </div>
 <div class="grid-preview">
@@ -248,6 +277,32 @@
 
 
   <main>
+    <div class="container">
+      <h2>Table of Contents</h2>
+      <sgds-table-of-contents>
+        <h2>Header</h2>
+        <li slot="contents">
+          <sgds-link>
+            <a href="#">Link</a>
+          </sgds-link>
+        </li>
+        <li slot="contents">
+          <sgds-link>
+            <a href="#">Link</a>
+          </sgds-link>
+        </li>
+        <li slot="contents">
+          <sgds-link>
+            <a href="#">Link</a>
+          </sgds-link>
+        </li>
+        <li slot="contents">
+          <sgds-link>
+            <a href="#">Link</a>
+          </sgds-link>
+        </li>
+      </sgds-table-of-contents>
+    </div>
     <div class="container">
       <h2>Icon</h2>
       <div class="d-flex-row">
