--- a/index.html
+++ b/index.html
@@ -1515,6 +1515,16 @@
           <a href="#" slot="link">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
           <!-- </sgds-link> -->
         </sgds-card>
+        <sgds-card orientation="vertical" imagePosition="after">
+          <img slot="image" alt="img alternate text goes here" width="467" height="312"
+            src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
+          <span slot="subtitle">SUBTITLE</span>
+          <h3 slot="title">Vertical Image Card</h3>
+          <span slot="description">vertical card with image position set to after</span>
+          <sgds-link slot="link">
+            <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+          </sgds-link>
+        </sgds-card>
         <sgds-card orientation="horizontal" imagePosition="after">
           <img slot="image" alt="img alternate text goes here" width="467" height="312"
             src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
