chore(mainnav): handle link component and pure text styling on mainnav

--- a/index.html
+++ b/index.html
@@ -138,10 +138,12 @@
   <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand">
 
   <sgds-mainnav-item active>
-    <a href="#">Home</a>
+    Home
   </sgds-mainnav-item>
   <sgds-mainnav-item active>
-    <a href="#">Home</a>
+    <sgds-link>
+      <a href="#">Home</a>
+    </sgds-link>
   </sgds-mainnav-item>
   <sgds-mainnav-item disabled><a href="#">About</a></sgds-mainnav-item>
   <sgds-mainnav-item slot="end" class="test test2"><a href="#" >Info</a></sgds-mainnav-item>
