chore(*): update e2e test

--- a/index.html
+++ b/index.html
@@ -641,7 +641,6 @@
           <sgds-icon slot="icon" name="placeholder"></sgds-icon>
           three
         </sgds-tab>
-      </sgds-tab-group>
 
       <sgds-tab-panel name="one">one</sgds-tab-panel>
       <sgds-tab-panel name="two">two</sgds-tab-panel>
@@ -929,7 +928,7 @@
           <a href="#">Home</a>
         </sgds-breadcrumb-item>
         <sgds-breadcrumb-item>
-          <a href="#">About</a>
+          About
         </sgds-breadcrumb-item>
         <sgds-breadcrumb-item><a href="https://www.google.com">Contact</a></sgds-breadcrumb-item>
         <sgds-breadcrumb-item><a href="#">Info</a></sgds-breadcrumb-item>
@@ -1879,26 +1878,6 @@
     </div>
     <div class="container">
       <h2>Table Default</h2>
-      <sgds-table rowheader="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
-        tabledata="[
-        [&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
-        [&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
-        [&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
-        ]"
-      >
-        <tr>
-          <td>Row 1, Column 1</td>
-          <td>Row 1, Column 2</td>
-        </tr>
-      </sgds-table>
-      <sgds-table rowheader="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
-        tabledata="[
-        [&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
-        [&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
-        [&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
-        ]"
-      >
-      </sgds-table>
       <sgds-table rowheader="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
         tabledata="[
         [&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
