chore(icon): update icon library

--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@
     <div class="container">
       <h2>Icon</h2>
       <div class="d-flex-row">
+        <sgds-icon name="archive" size="sm"></sgds-icon>
+        <sgds-icon name="lock-fill" size="sm"></sgds-icon>
         <sgds-icon name="arrow-bar-down" size="sm"></sgds-icon>
         <sgds-icon name="arrow-bar-down" size="md"></sgds-icon>
         <sgds-icon name="arrow-bar-down"></sgds-icon>
@@ -1485,6 +1487,14 @@
           <sgds-link slot="link">
             <a href="#">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
           </sgds-link>
+        </sgds-card>
+        <sgds-card>
+          <span slot="subtitle">SUBTITLE</span>
+          <span slot="title">Vertical Card</span>
+          <span slot="description">vertical card without image</span>
+          <!-- <sgds-link slot="link"> -->
+          <a href="#" slot="link">SM light dom anchor <sgds-icon name="arrow-right"></sgds-icon></a>
+          <!-- </sgds-link> -->
         </sgds-card>
         <sgds-card imageAdjustment="padding around">
           <img slot="image" alt="img alternate text goes here" width="467" height="312"
