docs(table): updated new fields for stories and test cases

--- a/playground/table.html
+++ b/playground/table.html
@@ -41,12 +41,12 @@
 
   <script>
     function test(ele) {
-      console.log("chice", ele);
+      console.log("chicken", ele);
       return 'ello'
     }
 
     function test2(ele) {
-      console.log("buton", ele.value);
+      console.log("banana", ele.value);
     }
 
     document.addEventListener("sgds-table-click-id-of-link", event => console.log("sgds-id-of-link", event));
